--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,5 +20,12 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+    - name: Upload artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+    # Artifact name
+        name: webpack
+    # Directory containing files to upload
+        path: public/
       env:
         CI: true
